# OpiFormSentiments

./: COPYRIGHT  README.md
src/: CMakeLists.txt
src/Demo/: CMakeLists.txt  main.cpp
src/OpiformSentiments/: CMakeLists.txt
src/OpiformSentiments/Agent/: AgentBase.cpp  AgentBase.h  AgentInconsistent.cpp  AgentInconsistent.h  AgentScoring.cpp  AgentScoring.h  AgentStubborn.cpp  AgentStubborn.h
src/OpiformSentiments/Game/: Game.cpp  Game.h  ProcessDynamicsBase.cpp  ProcessDynamicsBase.h  ProcessDynamicsCont.cpp  ProcessDynamicsCont.h  ProcessDynamicsOLG.cpp  ProcessDynamicsOLG.h  ProcessDynamicsReset.cpp  ProcessDynamicsReset.h
src/OpiformSentiments/Network/: NetworkAbstract.cpp  NetworkFC.cpp  NetworkSW.cpp  NetworkSWAge.cpp  NetworkSWAge.h
src/OpiformSentiments/Pairing/: agent.cpp  agent.h  random.cpp  random.h  roommate.cpp  roommate.h
src/OpiformSentiments/Utils/: Opinion.cpp  Opinion.h  OpinionFormationModels.h  OpinionUpdating.cpp  OpinionUpdating.h  Pairing.cpp  Pairing.h  PoliticalView.cpp  PoliticalView.h  RankingModel.cpp  RankingModel.h  Stats.cpp  Stats.h  Writer.cpp  constants.cpp  constants.h  types.h
